added tests for loan service